<resources>
    <string name="app_name">PTIT Lib</string>
    <string name="home">Trang Chủ</string>
    <string name="searching">Tìm Kiếm</string>
    <string name="saved">Đã Lưu</string>
    <string name="search">Tìm kiếm</string>
    <string name="save">Đã lưu</string>
    <string name="personal_page">Cá nhân</string>
    <string name="ptit_logo">PTIT logo</string>
    <string name="login_text">Đăng nhập</string>
    <string name="login_text_alternative">Hoặc đăng nhập với</string>
    <string name="app_copyright_text">Copyright © 2024 Học viện Công nghệ Bưu chính Viễn thông\nVersion: BCVT-2024.V1</string>
    <string name="user_avatar_description">User Avatar</string>
    <string name="user_full_name_test">Nguyễn Văn A</string>
    <string name="user_id_test">MSV: B21DCCN000</string>
    <string name="search_bar_placeholder">Tìm kiếm</string>
    <string name="collection_text">Bộ sưu tập</string>
    <string name="change_password_text">Đổi mật khẩu</string>
    <string name="old_password_text">Mật khẩu cũ</string>
    <string name="new_password_text">Mật khẩu mới</string>
    <string name="confirm_new_password_text">Xác nhận mật khẩu mới</string>
    <string name="featured_author_title">Tác giả nổi bật</string>
    <string name="featured_author_name_1">Bùi Xuân Phong</string>
    <string name="featured_author_name_2">Hoàng Xuân Diệu</string>
    <string name="featured_author_name_3">Trần Thị Hòa</string>
    <string name="featured_document_thumbnail_1_description">Featured document thumbnail 1</string>
    <string name="featured_document_thumbnail_2_description">Featured document thumbnail 2</string>
    <string name="featured_document_thumbnail_3_description">Featured document thumbnail 3</string>
    <string name="asterisk">*</string>
    <string name="user_class_id_test">LỚP: E21CQPM04</string>
    <string name="personal_information">Thông tin cá nhân</string>
    <string name="setting_text">Cài đặt</string>
    <string name="personal_information_icon_description">personal information icon</string>
    <string name="greater_than_icon_description">greater_than_icon</string>
    <string name="lock_icon_description">lock_icon</string>
    <string name="setting_icon_description">setting_icon</string>
    <string name="technical_assist_label">Hỗ trợ kĩ thuật</string>
    <string name="technical_assist_icon_description">technical assist icon</string>
    <string name="logout_text">Đăng xuất</string>

</resources>