<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <!-- Toolbar with Profile Info -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/primary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/user_avatar_description"
                android:src="@drawable/generic_avatar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_full_name_test"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id_test"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/vi_1"
            android:layout_marginStart="8dp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/en_1"
            android:layout_marginStart="4dp" />
    </LinearLayout>

    <!-- Search Bar -->
    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_bar_placeholder"
        android:drawableStart="@drawable/search_with_separator"
        android:drawablePadding="8dp"
        android:background="@drawable/search_background"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/collection"
        android:layout_width="390dp"
        android:layout_height="40dp"
        android:gravity="start"
        android:text="@string/collection_text"
        android:textSize="16sp"
        android:background="@drawable/button_selector"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Collection Section -->
    <HorizontalScrollView
        android:id="@+id/book_collection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/collection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:contentDescription="@string/featured_document_thumbnail_1_description"
                android:src="@drawable/image_3"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:contentDescription="@string/featured_document_thumbnail_2_description"

                android:src="@drawable/image_4"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:contentDescription="@string/featured_document_thumbnail_3_description"
                android:src="@drawable/image_5"
                android:layout_marginEnd="8dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <!-- Featured Authors Section -->
    <LinearLayout
        android:id="@+id/featured_authors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:elevation="15dp"
        app:layout_constraintTop_toBottomOf="@id/book_collection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/featured_author_title"
            android:background="@color/primary"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/featured_author_name_1"
            android:background="@color/background2"
            android:textSize="18sp"
            android:textColor="@color/text"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/featured_author_name_2"
            android:background="@color/background2"
            android:textSize="18sp"
            android:textColor="@color/text"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/featured_author_name_3"
            android:background="@color/background2"
            android:textSize="18sp"
            android:textColor="@color/text"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

    <!-- Bottom Navigation Bar -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/BottomNa"
            app:menu="@menu/nav_bottom_bar"
            app:itemIconSize="24dp"
            app:itemBackground="@color/background"
            app:labelVisibilityMode="labeled" />
    </FrameLayout>

    <!-- FrameLayout chứa ImageView -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/halfIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/ptit_logo"
            android:elevation="10dp"
            android:src="@drawable/image_2" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
