<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationPageActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >
        <View
            android:id="@+id/navbar_top"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"/>

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="170dp"
            android:src="@drawable/ic_profile"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/navbar_top"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/greater_than_icon_description"
            app:layout_constraintEnd_toEndOf="parent" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id_test"
            android:textColor="@color/text"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:text="@string/user_class_id_test"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/personalInformationButton"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile">

        <ImageView
            android:id="@+id/personalInformationIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/personal_information_icon_description"
            android:src="@drawable/personal_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintWidth_toHeight="true" />

        <TextView
            android:id="@+id/personalInformationLabel"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/personal_information"
            android:textColor="@color/text2"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/personalInformationIcon"
            tools:layout_editor_absoluteY="3dp" />

        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/greater_than_icon_description"
            android:src="@drawable/greater_than_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.545" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changePasswordButton"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personalInformationButton">

        <ImageView
            android:id="@+id/lockIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/lock_icon_description"
            android:src="@drawable/lock_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintWidth_toHeight="true" />

        <TextView
            android:id="@+id/changePasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/change_password_text"
            android:textColor="@color/text2"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/lockIcon"
            tools:layout_editor_absoluteY="3dp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/greater_than_icon_description"
            android:src="@drawable/greater_than_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingButton"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordButton">

        <ImageView
            android:id="@+id/settingIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/setting_icon_description"
            android:src="@drawable/setting_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintWidth_toHeight="true" />

        <TextView
            android:id="@+id/settingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/setting_text"
            android:textColor="@color/text2"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/settingIcon"
            tools:layout_editor_absoluteY="3dp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/greater_than_icon_description"
            android:src="@drawable/greater_than_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/technicalAssistButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingButton"
        android:padding="20dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/ho_tro_ki_thuat"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/technical_assist_icon_description"
            android:src="@drawable/ic5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/technical_assist_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text3"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logoutButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/technicalAssistButton"
        android:padding="5dp"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:background="@drawable/ho_tro_ki_thuat"
        android:backgroundTint="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/logout_text"
            android:textSize="20sp"
            android:textColor="#FFFFFF"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic6"
            android:layout_marginStart="150dp"/>
    </LinearLayout>

   <FrameLayout
       android:id="@+id/function6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent">

       <com.google.android.material.bottomnavigation.BottomNavigationView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           app:menu="@menu/menu_bottom_nav"
           app:itemBackground="@color/nav"
           app:itemIconTint="@color/navText"/>

   </FrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:src="@drawable/ptit_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/function6"
        app:layout_constraintVertical_bias="0.218" />


</androidx.constraintlayout.widget.ConstraintLayout>