<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangingPasswordActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <View
            android:id="@+id/navbar_top"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_text"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

    </FrameLayout>



    <LinearLayout
        android:id="@id/personalInformationButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintTop_toBottomOf="@id/frame_layout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/old_password_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/asterisk"/>

        </LinearLayout>

        <EditText
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/textView"
            android:padding="8dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/changePasswordButton"
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintTop_toBottomOf="@id/personalInformationButton">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/new_password_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/asterisk"/>

        </LinearLayout>

        <EditText
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/textView"
            android:padding="8dp"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/confirm_new_password_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/asterisk"/>

        </LinearLayout>

        <EditText
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/textView"
            android:padding="8dp"
            android:layout_marginStart="10dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password_text"
                android:layout_gravity="center"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:layout_marginTop="4dp"/>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/function6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/menu_bottom_nav"
            app:itemBackground="@color/nav"
            app:itemIconTint="@color/navText"/>

    </FrameLayout>

    <ImageView
        android:contentDescription="@string/ptit_logo"
        app:layout_constraintTop_toTopOf="@id/function6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ptit_ic" />


</androidx.constraintlayout.widget.ConstraintLayout>